value api: fix tests